# campushealth

./: .gitignore  processor.R
api/: .dburl  Cargo.toml
api/examples/: get.rs  insert.rs
api/src/: lib.rs  main.rs  orm.rs  reset.sh  schema.rs  type_map.ron
pgcodegen/: Cargo.toml  test.rs
pgcodegen/src/: db.rs  lib.rs  main.rs  postgresimpl.rs  rocket.rs  server.rs  type_map.ron
pgcodegen/src/sql/: get_primary_key.sql
scripts/: loaddata.py  script.R
scripts/sql/: README.md  appmostused.sql  appsused.txt  bigintdate.sql  create_to_date_fn.sql  dump.sql  get_constraints.sql  import_csv.sql  lagged.sql
server/: Cargo.toml
server/src/: lib.rs  main.rs
