[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
svg = ["resvg"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
uuid = { version = "1.0", features = ["v4", "serde"]}
resvg = { version = "0.34.1", optional = true}
chrono = "*"
err-derive = "*"
sha256 = "*"
pgcodegen = { path = "../pgcodegen" }
postgres-types = { git = "https://github.com/sfackler/rust-postgres/", features = ["with-uuid-1"]}
postgres = "*"

[build-dependencies]
pgcodegen = {path = "../pgcodegen"}