[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
svg = ["resvg"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
uuid = { version = "1.0", features = ["v4", "serde"]}
plotters = "*"
resvg = { version = "0.34.1", optional = true}
pgcodegen = { path = "../pgcodegen" }
postgres-types = { git = "https://github.com/sfackler/rust-postgres/", features = ["with-uuid-1"]}
tokio-postgres = "*"
async-trait = "*"
tokio = { version = "1.29.1", features = ["full"]}
rocket = {git = "https://github.com/SergioBenitez/Rocket/", features = ["json", "uuid"]}
sha256 = "*"
err-derive = "*"
sqlx = "*"

[dev-dependencies]
lazy_static = "*"

[build-dependencies]
pgcodegen = {path = "../pgcodegen"}
tokio-postgres = "*"
tokio = { version = "1.29.1", features = ["full"]}