[package]
name = "pgcodegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
postgres = ["dep:tokio-postgres", "db"]
rocket = ["dep:rocket"]
db = []
default = ["postgres", "rocket"]

[dependencies]
tokio = { version = "1.29.1", features = ["full"]}
serde = "*"
serde_derive = "*"
codegen = "*"
tokio-postgres = { version = "0.7.8", optional = true, features = ["with-uuid-1"] }
url = "*"
err-derive = "*"
ron = "*"
hex = "*"
uuid = { version = "1.0", features = ["v4", "serde"]}

base64 = { git = "https://github.com/marshallpierce/rust-base64" }
rocket = { version = "0.4.11", optional = true }